clipit.log
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
/bin/bash: /usr/bin/npm: No such file or directory
ERROR: npm v10.2.4 is known not to run on Node.js v10.19.0.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.

ERROR:
/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/utils/exit-handler.js:19
  const hasLoadedNpm = npm?.config.loaded
                           ^

SyntaxError: Unexpected token .
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli-entry.js:15:23)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/es6/validate-engines.js:39:10)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli.js:4:31)
ERROR: npm v10.2.4 is known not to run on Node.js v10.19.0.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.

ERROR:
/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/utils/exit-handler.js:19
  const hasLoadedNpm = npm?.config.loaded
                           ^

SyntaxError: Unexpected token .
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli-entry.js:15:23)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/es6/validate-engines.js:39:10)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli.js:4:31)
ERROR: npm v10.2.4 is known not to run on Node.js v10.19.0.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.

ERROR:
/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/utils/exit-handler.js:19
  const hasLoadedNpm = npm?.config.loaded
                           ^

SyntaxError: Unexpected token .
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli-entry.js:15:23)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/es6/validate-engines.js:39:10)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli.js:4:31)
ERROR: npm v10.2.4 is known not to run on Node.js v10.19.0.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.

ERROR:
/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/utils/exit-handler.js:19
  const hasLoadedNpm = npm?.config.loaded
                           ^

SyntaxError: Unexpected token .
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli-entry.js:15:23)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/es6/validate-engines.js:39:10)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli.js:4:31)
ERROR: npm v10.2.4 is known not to run on Node.js v10.19.0.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.

ERROR:
/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/utils/exit-handler.js:19
  const hasLoadedNpm = npm?.config.loaded
                           ^

SyntaxError: Unexpected token .
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli-entry.js:15:23)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/es6/validate-engines.js:39:10)
    at module.exports (/root/.nvm/versions/node/v21.5.0/lib/node_modules/npm/lib/cli.js:4:31)
